--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,10 @@
 <resources>
     <color name="main_bg">#1b292a</color>
     <color name="card_bg">#24252a</color>
+    <color name="icon_bg">#2b2e35</color>
+    <color name="transparent_bg">#3324252a</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#999999</color>
+    <color name="red">#BF0101</color>
 </resources>
