--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="actionBarStyle">@style/ActionBarStyle</item>
+        <item name="colorFaded">@color/gray</item>
+        <item name="colorWarning">@color/red</item>
+        <item name="colorLink">#56c8ff</item>
     </style>
 </resources>
