--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="87dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
@@ -18,8 +19,8 @@
         android:background="@drawable/bottom_background"
         android:padding="@dimen/def_indent"
         app:itemBackground="@drawable/bottom_item"
-        app:itemIconTint="@color/bottom_icon"
         app:itemIconSize="24dp"
+        app:itemIconTint="@color/bottom_icon"
         app:itemTextAppearanceActive="@style/BottomMenuItemActive"
         app:labelVisibilityMode="selected"
         app:menu="@menu/menu_bottom_navigation_view" />
