--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -2,12 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingEnd="10dp">
+    android:layout_marginEnd="-6dp">
 
     <ImageView
+        android:id="@+id/iv_avatar"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
-        android:background="@drawable/avatar_background"
-        android:padding="@dimen/avatar_padding"
-        android:src="@drawable/student" />
+        android:padding="@dimen/avatar_padding" />
 </FrameLayout>
