--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,12 @@
     <dimen name="radius">24dp</dimen>
     <dimen name="def_indent">16dp</dimen>
     <dimen name="mini_indent">8dp</dimen>
+    <dimen name="big_indent">34dp</dimen>
     <dimen name="avatar_padding">3dp</dimen>
     <dimen name="avatar_size">30dp</dimen>
     <dimen name="timer_text">22sp</dimen>
     <dimen name="title_size">18sp</dimen>
     <dimen name="label_size">14sp</dimen>
+    <dimen name="timedot_size">10dp</dimen>
+    <dimen name="big_timedot_size">24dp</dimen>
 </resources>
