less drawables for background

--- a/app/src/main/res/drawable/student_bg.xml
+++ b/app/src/main/res/drawable/student_bg.xml
@@ -4,5 +4,5 @@
     <stroke
         android:width="2dp"
         android:color="@color/card_bg" />
-    <solid android:color="#5cffd2" />
+    <solid android:color="?attr/colorPrimary" />
 </shape>
