--- a/app/src/main/res/drawable/student_bg2.xml
+++ b/app/src/main/res/drawable/student_bg2.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
     <stroke
         android:width="2dp"
-        android:color="@color/card_bg" />
-    <solid android:color="#65dafb" />
+        android:color="#31eb8f" />
+    <solid android:color="?attr/colorPrimary" />
 </shape>
