--- a/app/src/main/res/layout/item_biglesson.xml
+++ b/app/src/main/res/layout/item_biglesson.xml
@@ -44,7 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/def_indent"
-            android:background="@drawable/icon_background2"
+            android:background="@drawable/icon_background"
+            android:backgroundTint="#60fabe"
             android:padding="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
