--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -8,5 +8,6 @@
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
+        android:background="@drawable/student_bg"
         android:padding="@dimen/avatar_padding" />
 </FrameLayout>
